# 0.00.42 (57341) Oct 5, 2011
Added in '<' and '>' for bond angle differences for when lone pairs exist
Potentially fixed the "missing wedge" bug for bond angle sectors
# 0.00.41 (57259) Oct 4, 2011
Fixed bug where atoms could come off of their bonds
Added optimizations to work around remaining memory leak
Fixed multiple memory leak bugs
# 0.00.40 (57078) Sep 29, 2011
Mode changed to "White Background"
# 0.00.39 (57076) Sep 29, 2011
"Teacher" menu i18nized, changed to one checkbox for "Projector Mode" option.
# 0.00.38 (57065) Sep 29, 2011
# 0.00.37 (57060) Sep 29, 2011
Minor text change for "Teacher" menu
Center atom made purple
Removed "Real Examples" panel from the 1st tab
Bugfixes
# 0.00.36 (56939) Sep 23, 2011
9/23/11 Added colors options (projector mode), lots of code changes
# 0.00.35 (56504) Sep 13, 2011
Increased the font size of the real example name
Bugfix: don't crash on clicking "Real Example" area without any molecules
Added H3O+ ion
# 0.00.34 (56451) Sep 12, 2011
Added test version of "forward/back" arrows for the "Real Examples" area.
# 0.00.33 (56443) Sep 12, 2011
Corrected O2 lone pairs
Bond angle checkbox disabled (by default) now when there are less than 2 bonds
Geometry name color tweaks (EM's recommendations)
# 0.00.32 (56409) Sep 11, 2011
Added colors to the geometry names, added developer control to modify them
Added proper control panel resizing for i18n
Filled in many-lone-pair geometry configuration names
Slightly changed startup bond positions to yield a good 180-degree bond spread
Added developer option to change the color of "Remove All" button
Changed "Reset" to "Remove All", moved to under the lone pair control panel
Added H2
Control panel color tweaks
Removed ball-and-stick / spacefill options
Added 1 lone pair to O2
Reduced the padding between bond icons
Added better visibility handling for the "draggable" lone pair icon and show lone pairs checkbox. (Switches to visible when all lone pairs are removed)