@@ -38,5 +38,3 @@ control.removeAll=Remove All
 realExamples.title=Real Examples
 
 angle.degrees={0}\u00B0
-angle.greaterThanDegrees=> {0}\u00B0
-angle.lessThanDegrees=< {0}\u00B0
